# compchem-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.agents/rules/: ypotheto_compchem.md
scratch/: run_vib_demo.py
scripts/: bump_version.py  gen_tool_catalog.py  issue_key.py
src/ypotheto_compchem_mcp/: __main__.py  apikeys.py  artifacts.py  cli.py  config.py  database.py  envelope.py  errors.py  http_app.py  jobs.py  molecules.py  oauth.py  server.py  storage.py  usage.py  workspace.py
src/ypotheto_compchem_mcp/chemistry/: __init__.py  _backend_checks.py  builder_engine.py  conformer_engine.py  descriptors.py  ensemble_pipeline.py  kinetics_engine.py  md_engine.py  mlff_engine.py  parser.py  periodic_engine.py  polymer_engine.py  preflight.py  pyscf_driver.py  qm_engine.py  runner.py  schemas.py  solubility_engine.py  standardizer.py  thermo_engine.py  vib_engine.py  xtb_engine.py
src/ypotheto_compchem_mcp/content/: concepts.yaml
src/ypotheto_compchem_mcp/modules/: __init__.py  advisor_tools.py  builder_tools.py  cheminformatics_tools.py  dynamics_tools.py  ensemble_tools.py  kinetics_tools.py  mlff_tools.py  periodic_tools.py  polymer_tools.py  quantum_tools.py  scientific_preflight_tools.py  solubility_tools.py  thermo_tools.py  vibrations_tools.py  xtb_tools.py
src/ypotheto_compchem_mcp/utils/: limits.py  plotting.py
tests/: conftest.py  test_advisor.py  test_apikeys.py  test_builder_tools.py  test_cclib_parser.py  test_cheminfo_adv.py  test_config.py  test_core_only_install.py  test_durable_jobs.py  test_ensemble.py  test_errors.py  test_http.py  test_integration.py  test_jobs_envelope_shape.py  test_kinetics.py  test_lammps_thermo_parsing.py  test_limits.py  test_mlff.py  test_molecules.py  test_oauth.py  test_periodic.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_plotting_utils.py  test_polymers.py  test_preflight.py  test_qm_engine_properties.py  test_server.py  test_solubility.py  test_storage.py  test_thermo.py  test_usage.py  test_xtb.py
