[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ypotheto-compchem-mcp"
version = "0.6.0"
description = "Ypotheto Computational Chemistry MCP Server providing natural language access to DFT, semi-empirical, and cheminformatics tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ypotheto Brand Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "starlette>=0.36.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "rdkit>=2023.9.5",
    "ase>=3.22.1",
    "matplotlib>=3.8.0",
    "pyarrow>=15.0.0",
    "pyscf>=2.5.0",
    "spglib>=2.3.0",
    "cclib>=1.8.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.34.0",
    "cantera>=3.0.0",
    "pyclapeyron>=0.1.0",
    "MDAnalysis>=2.7.0",
    "sella>=2.3.0",
    "geometric>=1.0.0",
    "chgnet>=0.3.0",
    "mace-torch>=0.3.0",
]

[project.scripts]
ypotheto-compchem-mcp = "ypotheto_compchem_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ypotheto_compchem_mcp"]
