[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ypotheto-compchem-mcp"
dynamic = ["version"]
description = "Ypotheto Computational Chemistry MCP Server providing natural language access to DFT, semi-empirical, and cheminformatics tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ypotheto Brand Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "starlette>=0.36.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "rdkit>=2023.9.5",
    "ase>=3.22.1",
    "matplotlib>=3.8.0",
    "pyarrow>=15.0.0",
    "spglib>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Ab initio / semi-empirical QM (PySCF local backend + cclib log parsing for the Docker-runner path).
qm = ["pyscf>=2.5.0", "cclib>=1.8.0"]
# Machine-learned interatomic potentials (CHGNet, MACE).
mlff = ["chgnet>=0.3.0", "mace-torch>=0.3.0"]
# Engineering thermodynamics (Cantera) and phase-equilibrium EOS (Clapeyron.jl via juliacall -
# NOT the abandoned "pyclapeyron" PyPI package, which this project never actually imports).
thermo = ["cantera>=3.0.0", "juliacall>=0.9.0"]
# Trajectory post-processing (RDF/RMSD/MSD) for classical MD runs.
md = ["MDAnalysis>=2.7.0"]
# Transition-state saddle-point optimization.
ts = ["sella>=2.3.0"]
# Durable job queue / molecule archive backed by PostgreSQL.
db = ["psycopg2-binary>=2.9.0"]
# DigitalOcean Spaces (S3-compatible) artifact/storage backend.
s3 = ["boto3>=1.34.0"]
all = [
    "ypotheto-compchem-mcp[qm,mlff,thermo,md,ts,db,s3]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "moto[s3]>=5.0",
]

[project.scripts]
ypotheto-compchem-mcp = "ypotheto_compchem_mcp.cli:main"

[tool.hatch.version]
path = "src/ypotheto_compchem_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ypotheto_compchem_mcp"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# rdkit's own bundled .pyi stubs contain a malformed type name with a literal
# space (a C++-template-to-Python codegen bug: `rdkit.rdBase._vectunsigned int`
# in rdMolDescriptors.pyi) that mypy can't even parse, aborting the whole run
# before it checks anything else. Not fixable here - skip following into
# rdkit's stubs entirely rather than let one broken upstream .pyi block every
# other check.
module = "rdkit.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-backend tests (xtb/PySCF/CREST/Packmol/LAMMPS) - run with `pytest -m integration` on a machine/image that has the binaries installed.",
]
